# privateer-rs

./: .gitignore  Cargo.toml  my_game.ron  my_ship.ron  rustfmt.toml  vscode.code-workspace
component-derive/: Cargo.toml
component-derive/src/: lib.rs
data/: engines.ron  hulls.ron
privateer/: Cargo.toml
privateer/src/: components.rs  main.rs  props.rs  ship.rs
privateer_custom_derive/: Cargo.toml
privateer_custom_derive/src/: lib.rs
src/: components.rs  input.rs  io.rs  lib.rs  main.rs  repl.rs  ship.rs  state_machine.rs  template.rs  util.rs  world.rs
src/components/: mod.rs  util.rs
src/state_machine/: commands.rs  mod.rs  ship.rs  ship_builder.rs  util.rs
src/state_machine/ship_builder/: add_component.rs  mod.rs  remove_component.rs
src/state_machine/shipyard/: add_component.rs  mod.rs  remove_component.rs
