[package]
name = "privateer-rs"
version = "0.1.0"
authors = ["David R. Morrison <drmorr@evokewonder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
ron = "0.5.1"