[package]
name = "privateer-rs"
version = "0.1.0"
authors = ["David R. Morrison <drmorr@evokewonder.com>"]
edition = "2018"

[[bin]]
name = "shipyard"

[lib]
name = "privateer"

[dependencies]
anyhow = "1.0.13"
component-derive = { path = "component-derive" }
lazy_static = "1.4.0"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"]}
typetag = "0.1.4"